--- a/docker/Dockerfile-debian
+++ b/docker/Dockerfile-debian
@@ -3,7 +3,7 @@ FROM $BASE
 
 RUN apt-get update && \
     apt-get install -y cmake build-essential debsigs git devscripts dh-python python3 python3-setuptools dh-systemd \
-      libfftw3-dev && \
+      libfftw3-dev librtlsdr-dev libsoapysdr-dev netcat && \
     rm -rf /var/lib/apt/lists/*
 
 ADD docker/scripts/build-all.sh /
