create snapshot packages when run by jenkins

--- a/docker/Dockerfile-debian
+++ b/docker/Dockerfile-debian
@@ -1,9 +1,11 @@
 ARG BASE
 FROM $BASE
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 RUN apt-get update && \
     apt-get install -y cmake build-essential debsigs git devscripts dh-python python3 python3-setuptools dh-systemd \
-      libfftw3-dev librtlsdr-dev libsoapysdr-dev netcat && \
+      libfftw3-dev librtlsdr-dev libsoapysdr-dev netcat git-buildpackage libitpp-dev libsndfile1-dev portaudio19-dev help2man && \
     rm -rf /var/lib/apt/lists/*
 
 ADD docker/scripts/build-all.sh /
