--- a/docker/Dockerfile-debian
+++ b/docker/Dockerfile-debian
@@ -4,7 +4,7 @@ FROM $BASE
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
-    apt-get install -y wget gnupg && \
+    apt-get install -y wget gnupg apt-transport-https && \
     wget -O - https://repo.openwebrx.de/debian/key.gpg.txt | apt-key add && \
     echo "deb https://repo.openwebrx.de/debian/ experimental main" > /etc/apt/sources.list.d/openwebrx.list && \
     apt-get update && \
