--- a/docker/Dockerfile-debian
+++ b/docker/Dockerfile-debian
@@ -6,8 +6,13 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
     apt-get install --no-upgrade -y wget gnupg apt-transport-https && \
     wget -O - https://repo.openwebrx.de/debian/key.gpg.txt | apt-key add && \
-    echo "deb https://repo.openwebrx.de/debian/ buster main" > /etc/apt/sources.list.d/openwebrx.list && \
-    echo "deb https://repo.openwebrx.de/debian/ experimental main" > /etc/apt/sources.list.d/openwebrx-experimental.list && \
+    if grep -q "Ubuntu" /etc/os-release; then \
+        echo "deb https://repo.openwebrx.de/ubuntu/ focal main" > /etc/apt/sources.list.d/openwebrx.list && \
+        echo "deb https://repo.openwebrx.de/ubuntu/ unstable main" > /etc/apt/sources.list.d/openwebrx-unstable.list; \
+    else \
+        echo "deb https://repo.openwebrx.de/debian/ buster main" > /etc/apt/sources.list.d/openwebrx.list && \
+        echo "deb https://repo.openwebrx.de/debian/ experimental main" > /etc/apt/sources.list.d/openwebrx-experimental.list; \
+    fi && \
     apt-get update && \
     apt-get install --no-upgrade -y cmake build-essential debsigs git devscripts dh-python python3 python3-setuptools dh-systemd \
       libfftw3-dev librtlsdr-dev libsoapysdr-dev netcat git-buildpackage libitpp-dev libsndfile1-dev portaudio19-dev help2man && \
